# mlops_project

./: .gitignore  README.md  cloudbuild.yaml  config_cpu.yaml  data.dvc  docker-compose.yml  pyproject.toml  requirements.txt  requirements_tests.txt  tasks.py
.dvc/: config
.github/workflows/: api.yaml  cml_data.yaml  docker-build.yml  new-api.yaml  test_tf_v.yaml  tests.yaml  workflow_wandb.yaml
configs/: sweep.yaml
dockerfiles/: api.dockerfile  backend.dockerfile  evaluate.dockerfile  train.dockerfile  train_cloud.dockerfile
docs/: mkdocs.yaml
models/NRMS-2025-01-20 11:35:13.069339nrms_model/: fingerprint.pb  saved_model.pb
models/NRMS-2025-01-23 10:13:16.484268nrms_model/: fingerprint.pb  saved_model.pb
models/NRMS-2025-01-23 16:49:49.258035nrms_model/: fingerprint.pb  saved_model.pb
models/NRMS-2025-01-24 13:15:40.700503nrms_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/NRMS-2025-01-24 13:20:16.679838nrms_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/NRMS-2025-01-24 13:23:24.633935nrms_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/NRMS-2025-01-24 13:29:41.145398nrms_model/: fingerprint.pb  saved_model.pb
models/NRMS-2025-01-24 13:32:18.124279nrms_model/: fingerprint.pb  saved_model.pb
models/NRMS-2025-01-24 13:35:36.400295nrms_model/: fingerprint.pb  saved_model.pb
models/NRMS-2025-01-24 13:38:18.068357nrms_model/: fingerprint.pb  (+1 more)
notebooks/: data_visualization_tests.ipynb
reports/: README.md
tests/: __init__.py  test_data.py  test_model.py  test_training.py
wandb/: latest-run
(+296 files in other folders)
