[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nrms_ml_ops"
version = "0.0.1"
description = "This is the cookiecutter template we'll use for our dtu mlops project"
authors = [
  { name = "adria", email = "your@email.com" },
]
readme = "README.md"
requires-python = ">=3.11.11"
dynamic = ["dependencies", "optional-dependencies"]
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]

[project.scripts]
train = "nrms_ml_ops.train:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]